# wu_zi_qi0

./: CMakeLists.txt  README.md  demo1.cpp  demo1.h  forget_pw.cpp  forget_pw.h  forget_pw.ui  global.h  login.cpp  login.h  login.ui  mainw.cpp  mainw.h  mainw.ui  set_pw.cpp  set_pw.h  set_pw.ui  set_question.cpp  set_question.h  set_question.ui  widget.cpp  widget.ui  wu_zi_qi.pro  zhu_ce.cpp  zhu_ce.h  zhu_ce.ui
.qtcreator/: CMakeLists.txt.user.5c6a81b
c1/: AI.cpp  AI.h  CMakeLists.txt  mainai.cpp  mainai.h  win.cpp  win.h  win.ui  win1.cpp  win1.h  win1.ui
renji/: CMakeLists.txt  chessboard2.cpp  chessboard2.h  chessboard2.ui  demo.cpp  demo.h  demo1.cpp  demo1.h  mainrenji.cpp  record.cpp  record_2.cpp  record_2.h  record_2.ui  untitled3.pro  widget.cpp  widget.h
renren/: CMakeLists.txt  chessboard3.cpp  chessboard3.h  chessboard3.ui  demo.cpp  demo.h  record.cpp  record.h  record.ui  untitled5.pro
renren/.qtcreator/: untitled5.pro.user.5c6a81b
wuziqi2/: CMakeLists.txt  chessboard.cpp  chessboard.h  choose.cpp  choose.h  choose.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  qiuhechos.cpp  qiuhechos.h  qiuhechos.ui  setting.cpp  setting.h  setting.ui  shuru.cpp  shuru.h  shuru.ui  stdshared.h
